--- a/New arrivals.html
+++ b/New arrivals.html
@@ -61,31 +61,31 @@
                 <img src="images/Caramel Dessert.jpg">
                 <h3>Caramel Dessert</h3>
                 <div class="price">£15.50</div>
-                <div class="add-to-cart-btn" data-name="Mini-Fruit-Pie" data-price="15.50" 
-                data-image="images/Mini Fruit Pies.jpg">Add to Cart</div>
+                <div class="add-to-cart-btn" data-name="Caramel Dessert" data-price="15.50" 
+                data-image="images/Caramel Dessert.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item two-->
             <div class="Special-Card">
                 <img src="images/Brownie Waffles - Copy.jpg">
                 <h3>Brownie Waffles</h3>
                 <div class="price">£11.40</div>
-                <div class="add-to-cart-btn" data-name="Whipped cream Strawberry Pie" data-price="11.40" 
-                data-image="images/Straberry pie.jpg">Add to Cart</div>
+                <div class="add-to-cart-btn" data-name="Brownie Waffles" data-price="11.40" 
+                data-image="images/Brownie Waffles - Copy.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item three-->
             <div class="Special-Card">
                 <img src="images/Strawberry crumble.jpg">
                 <h3>Strawberry Cheesecake</h3>
                 <div class="price">£5.50</div>
-                <div class="add-to-cart-btn" data-name="Lemon meringue" data-price="5.50" 
-                data-image="images/Lemon Marange Pie.jpg">Add to Cart</div>
+                <div class="add-to-cart-btn" data-name="Strawberry Cheesecake" data-price="5.50" 
+                data-image="images/Strawberry crumble.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item four-->
             <div class="Special-Card">
                 <img src="images/Macaroons.jpg">
-                <h3>Chcolate Pie</h3>
-                <div class="price">£14.50</div>
-                <div class="add-to-cart-btn" data-name="Chocolate Pie" data-price="14.50" 
+                <h3>Macaroons</h3>
+                <div class="price">£6.50</div>
+                <div class="add-to-cart-btn" data-name="Macaroons" data-price="6.50" 
                 data-image="images/Chocolate Pie.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item five-->
@@ -94,23 +94,23 @@
                 <h3>Tiramisu</h3>
                 <div class="price">£12.50/-</div>
                 <div class="add-to-cart-btn" data-name="Tiramisu" data-price="12.50" 
-                data-image="images/Chocolate cupcakes.jpeg">Add to Cart</div>
+                data-image="images/Tarimusu.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item six-->
             <div class="Special-Card">
                 <img src="images/red velvet cupcakes.jpg">
                 <h3>Red Velvet Cupcakes</h3>
-                <div class="price">£10.50</div>
-                <div class="add-to-cart-btn" data-name="Caramel Cupcakes" data-price="10.50" 
-                data-image="images/Caramel cupcakes.jpg">Add to Cart</div>
+                <div class="price">£9.55</div>
+                <div class="add-to-cart-btn" data-name="Red Velvet Cupcakes" data-price="9.55" 
+                data-image="images/red velvet cupcakes.jpg">Add to Cart</div>
             </div>
             <!--Brownie item seven-->
             <div class="Special-Card">
                 <img src="images/bon-bon - Copy.jpg">
                 <h3>Bon-Bon Treats</h3>
-                <div class="price">£10.50/-</div>
-                <div class="add-to-cart-btn" data-name="Strawberry Brownies" data-price="10.50" 
-                data-image="images/Strawberry brownines.jpg">Add to Cart</div>
+                <div class="price">£3.50</div>
+                <div class="add-to-cart-btn" data-name="Bon-Bon Treats" data-price="3.50" 
+                data-image="images/bon-bon - Copy.jpg">Add to Cart</div>
             </div>
             <!--Brownie item eight-->
             <div class="Special-Card">
@@ -271,4 +271,5 @@
         });
     </script>
  </body>
+
 </html>
