--- a/Cakes.html
+++ b/Cakes.html
@@ -69,7 +69,7 @@
         <h3>Anniversary cakes</h3>
         <div class="price">£10.50/-</div>
        <div class="add-to-cart-btn" data-name="Anniversary Cakes" data-price="10.50" 
-       data-image="images/Anniversary.jpg">Add to Cart</div>
+       data-image="images/Anniversary - Copy.jpg">Add to Cart</div>
         </div>
         <!--Pie Item six-->
         <div class="Special-Card">
@@ -77,7 +77,7 @@
         <h3>Bridal Shower Cake</h3>
         <div class="price">£10.50/-</div>
        <div class="add-to-cart-btn" data-name="Bridal Shower cake" data-price="10.50" 
-       data-image="images/Bride.jpg">Add to Cart</div>
+       data-image="images/Bride - Copy.jpg">Add to Cart</div>
         </div>
             <!--Pie Item five-->
         <div class="Special-Card">
@@ -85,7 +85,7 @@
         <h3>Sweet 16 Cakes</h3>
         <div class="price">£12.50/-</div>
         <div class="add-to-cart-btn" data-name="Sweet 16" data-price="10.50" 
-        data-image= "images/Background.jpg">Add to Cart</div>
+        data-image= "images/Background - Copy.jpg">Add to Cart</div>
         </div>
             <!--Pie Item four-->
         <div class="Special-Card">
@@ -115,12 +115,12 @@
         <div class="Special-Card">
         <img src="images/Baby Shower.jpg">
         <h3>Baby Shower Cake</h3>
-        <div class="price">£15.50/-</div>
+        <div class="price">£15.50</div>
          <div class="add-to-cart-btn" data-name="Baby Shower Cake" data-price="15.50" 
          data-image="images/Baby Shower.jpg">Add to Cart</div>
         </div>
     </section>
-
+    <!--Script for Search icon-->
     <script>
         // Initialize cart array
         let cart = [];
