--- a/About us.html
+++ b/About us.html
@@ -18,7 +18,7 @@
             <a href="Other Desserts.html">Other Desserts</a>
             <a href="New arrivals.html">New Arrivals</a>
             <a href="About us.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="Contact.html">Contact</a>
         </nav>
         <div class="icons">
             <div class="search-icon"><i class="fa-solid fa-heart"></i></i></div>
@@ -228,4 +228,5 @@
     </section>
     <script src="script.js"></script>
 </body>
+
 </html>
