--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
              <a href="Cakes.html">Cakes</a>
              <a href="New arrivals.html">New Arrivals</a>
              <a href="About us.html">About</a>
-             <a href="contact.html">Contact</a>
+             <a href="Contact.html">Contact</a>
         </nav>
         <div class="icons">
             <div class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
@@ -272,3 +272,4 @@
     </script>
  </body>
 </html>
+
