--- a/New arrivals.html
+++ b/New arrivals.html
@@ -86,7 +86,7 @@
                 <h3>Macaroons</h3>
                 <div class="price">£6.50</div>
                 <div class="add-to-cart-btn" data-name="Macaroons" data-price="6.50" 
-                data-image="images/Chocolate Pie.jpg">Add to Cart</div>
+                data-image="images/Macaroons.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item five-->
             <div class="Special-Card">
@@ -273,3 +273,4 @@
  </body>
 
 </html>
+
