--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h3>Chocolate Cake</h3>
                 <div class="price">£11.40</div>
                 <div class="add-to-cart-btn" data-name="Chocolate Cake" data-price="11.40" 
-                data-image="images/Chocolate Cake.jpg">Add to Cart</div>
+                data-image="images/Chocolate cake.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item three-->
             <div class="Special-Card">
@@ -78,7 +78,7 @@
                 <h3>Lavender Cake</h3>
                 <div class="price">£5.50</div>
                 <div class="add-to-cart-btn" data-name="Lavender Cake" data-price="5.50" 
-                data-image="images/Lavender Cake.jpg">Add to Cart</div>
+                data-image="images/Lavender cake.jpg">Add to Cart</div>
             </div>
             <!--Cupcake Item four-->
             <div class="Special-Card">
@@ -272,4 +272,5 @@
     </script>
  </body>
 </html>
+
 
